--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Rock Paper Scissors</h1>
+    </header>
     <script src="javascript.js"></script>
+
+    <div class="score-board">
+        <div id="user-label" class="badge">user</div>
+        <div id="computer-label" class="badge">comp</div>
+        <span id="user-score">0</span>:<span id="computer-score">0</span>
+    </div>
+    <div class ="result">
+        <p>Paper covers rock. You win!</p>
+    </div>
+
+    <div class ="choices">
+        <div class ="choice" id = "r">
+            <img src="images/ben-karpinski-rock-unsplash.jpg" alt="">
+        </div>
+        <div class ="choice" id = "p">
+            <img src="images/michael-schiffer-paper-unsplash.jpg" alt="">
+        </div>
+        <div class ="choice" id = "c"> 
+            <img src="images/matt-artz-scissors-unsplash.jpg" alt="">
+        </div>
+    </div>
 </body>
 </html>
