--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
             <img src="images/matt-artz-scissors-unsplash.jpg" alt="">
         </div>
     </div>
+    <p id = "action-message">Make your move.</p>
 </body>
 </html>
