started adding javascript

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </div>
 
     <div class ="choices">
-        <div class ="choice" id = "r">
+        <div class ="choice" id = "rock">
             <img src="images/ben-karpinski-rock-unsplash.jpg" alt="">
         </div>
-        <div class ="choice" id = "p">
+        <div class ="choice" id = "paper">
             <img src="images/michael-schiffer-paper-unsplash.jpg" alt="">
         </div>
-        <div class ="choice" id = "c"> 
+        <div class ="choice" id = "scissor"> 
             <img src="images/matt-artz-scissors-unsplash.jpg" alt="">
         </div>
     </div>
