--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -14,13 +14,13 @@
     <header>
         <h1>Rock Paper Scissors</h1>
     </header>
-    <script src="javascript.js"></script>
 
     <div class="score-board">
         <div id="user-label" class="badge">user</div>
         <div id="computer-label" class="badge">comp</div>
         <span id="user-score">0</span>:<span id="computer-score">0</span>
     </div>
+    
     <div class ="result">
         <p>Paper covers rock. You win!</p>
     </div>
@@ -37,5 +37,6 @@
         </div>
     </div>
     <p id = "action-message">Make your move.</p>
+    <script src = "javascript.js" charset = "utf-8"></script>
 </body>
 </html>
